# Schemer

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.cargo/: config.toml
.claude/agents/: scheme-qbe-specialist.md
.github/workflows/: ci.yaml
claudedocs/: workflow_qbe_backend.md
core/: Cargo.toml
core/src/: env.rs  error.rs  eval.rs  interner.rs  lib.rs  macros.rs  op.rs  parser.rs  proc.rs  tags.rs
core/src/compiler/: anf.rs  closure.rs  codegen.rs  link.rs  mod.rs  primitives.rs  qbe.rs
core/src/eval/: interp.rs  legacy.rs  mod.rs  primitives.rs  session.rs  value_bridge.rs
core/src/types/: env.rs  list.rs  mod.rs  pair.rs  value.rs
core/tests/: eval.rs  macros.rs
docs/design/: anf-interpreter-spec.md  library-extensions-spec.md  macros-design.md
examples/: basic.scm  cons.scm  define.scm  factorial.scm  fib.scm  game-of-life.scm  lambda.scm  let.scm  map.scm
lib/: prelude.scm
src/: env.rs  eval.rs  lib.rs  macros.rs  op.rs  parser.rs  proc.rs  types.rs
src/types/: atom.rs  list.rs  mod.rs  pair.rs  symbolic_expression.rs  value.rs
tests/: eval.rs  macros.rs
