[package]
name = "schemer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
lazy_static = "1.5.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
rustyline = "15.0.0"
tailcall = "~1"
schemer_runtime = {path = "../packages/runtime"}


[[bin]]
name = "schemer"
path = "src/bin/cli/main.rs"
